--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Hi There! I'm Mobolaji</h1>
       <h2>Data Analyst | Physicist</h2>
     </div>
-    <img class="profile-img" src="C:\Users\Bolaji\Documents\Portfolio\images\mobolaji.png" alt="Mobolaji">
+   <img class="profile-img" src="images/mobolaji.png" alt="Mobolaji">
   </header> <nav>
     <a href="#about">About</a>
     <a href="#resume">Resume</a>
